<resources>
  <string name="app_name">HealthCareApplication</string>
  <!-- Activity Name -->
  <string name="activity_signup_user_name">Input User Info</string>
  <string name="activity_signup_trainer_name">Input Trainer Info</string>
  <string name="activity_type_select_name">Select User Type</string>
  <string name="activity_select_trainer_name">Select trainer</string>
  <string name="activity_select_time_name">Select Time</string>
  <string name="activity_edit_profile">Edit Profile</string>
  <string name="activity_edit_timetable">Edit TimeTable</string>
  <string name="activity_user_manage">User Manage</string>
  <!-- Action -->
  <string name="action_select_complete">Select Complete</string>
  <string name="action_profile">Profile</string>
  <string name="action_timetable">TimeTable</string>
  <string name="action_chat">Chat</string>
  <string name="action_complete">Complete</string>
  <string name="action_edit_timetable">Edit timetable</string>
  <string name="action_edit_profile">Edit Profile</string>
  <string name="action_user_manage">User Manage</string>
  <!-- Type -->
  <string name="type_user">User</string>
  <string name="type_trainer">Trainer</string>
  <string name="type_gender_woman">Woman</string>
  <string name="type_gender_man">Man</string>
  <!-- Hint -->
  <string name="hint_name">Name</string>
  <string name="hint_age">Age</string>
  <string name="hint_education">Education</string>
  <string name="hint_certificate">Certificate</string>
  <string name="hint_gender">Gender</string>
  <string name="hint_time">Time</string>
  <string name="hint_height">Height (cm)</string>
  <string name="hint_weight">Weight (kg)</string>
  <string name="hint_body_fat">Body Fat Mass (kg)</string>
  <string name="hint_skeletal_muscle">Skeletal Muscle Mass (kg)</string>
  <!-- Message -->
  <string name="msg_login_cancelled">Login Cancelled</string>
  <string name="msg_login_no_connection">No internet connection</string>
  <string name="msg_unknown_error">Unknown error occurred</string>
  <string name="msg_timetable_updated">Updated time table</string>
  <string name="msg_timetable_not_selected">Select least one</string>
  <string name="msg_profile_saved">Saved profile</string>
  <string name="msg_profile_save_failed">Failed save profile</string>
  <string name="msg_timetable_exist_time">Exist time</string>
  <string name="msg_user_extra_empty">Exists empty field</string>
  <string name="msg_user_extra_saved">Saved user info</string>
  <string name="msg_user_extra_failed">Failed user info</string>
  <!-- Notification -->
  <string name="notification_channel_chats">Chats Notification</string>
  <!-- Etc -->
  <string name="empty_item">None</string>
  <string name="empty_timetable">No timetable</string>
  <string name="empty_user">No selected user</string>
  <string name="empty_last_modified">None</string>
  <string name="empty_user_extra">No input information by trainer</string>
  <string name="hour_format_am">%d:00 AM</string>
  <string name="hour_format_pm">%d:00 PM</string>
  <string name="timestamp_format">YYYY. MM. dd.</string>
  <string name="last_modified_format">Last modified : %s</string>
</resources>
