<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_name_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_normal"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_name"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_age_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_name_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_age"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_age"
      android:inputType="number"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_gender_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_age_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_gender"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:hint="@string/hint_gender"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/keyline_normal"
    android:src="@drawable/ic_save_white_24dp"
    app:fabSize="normal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>