<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_height_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_normal"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_height"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_height"
      android:inputType="number"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_weight_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_height_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_weight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_weight"
      android:inputType="numberDecimal"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_body_fat_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_weight_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_body_fat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_body_fat"
      android:inputType="numberDecimal"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/edit_skeletal_muscle_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_body_fat_layout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/edit_skeletal_muscle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_skeletal_muscle"
      android:inputType="numberDecimal"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <TextView
    android:id="@+id/tv_last_modified"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_small"
    android:layout_marginLeft="@dimen/keyline_normal"
    android:layout_marginRight="@dimen/keyline_normal"
    android:gravity="end"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_skeletal_muscle_layout"/>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/keyline_normal"
    android:src="@drawable/ic_save_white_24dp"
    app:fabSize="normal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>